--- a/package.json
+++ b/package.json
@@ -12,13 +12,21 @@
   "devDependencies": {
     "@babel/core": "^7.7.5",
     "@babel/preset-env": "^7.7.6",
+    "@fortawesome/fontawesome-free": "^5.12.0",
     "babel-loader": "^8.0.6",
     "clean-webpack-plugin": "^3.0.0",
+    "css-loader": "^3.4.0",
+    "ejs": "^3.0.1",
+    "ejs-html-loader": "^4.0.1",
     "eslint": "^6.7.2",
-    "express": "^4.17.1"
-  },
-  "dependencies": {
+    "express": "^4.17.1",
+    "extract-css-chunks-webpack-plugin": "^4.7.1",
+    "file-loader": "^5.0.2",
+    "html-loader": "^0.5.5",
     "html-webpack-plugin": "^3.2.0",
+    "postcss-loader": "^3.0.0",
+    "postcss-preset-env": "^6.7.0",
+    "sass-loader": "^8.0.0",
     "webpack": "^4.41.2",
     "webpack-cli": "^3.3.10",
     "webpack-dev-middleware": "^3.7.2",
