--- a/package.json
+++ b/package.json
@@ -4,8 +4,15 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "dev": "node server/dev-server.js"
   },
+  "plugins": {
+    "autoprefixer": {}
+  },
+  "browserslist": [
+    "defaults"
+  ],
   "keywords": [],
   "author": "",
   "license": "ISC",
@@ -24,6 +31,8 @@
     "file-loader": "^5.0.2",
     "html-loader": "^0.5.5",
     "html-webpack-plugin": "^3.2.0",
+    "making-stuffs-queries": "^1.1.11",
+    "node-sass": "^4.13.0",
     "postcss-loader": "^3.0.0",
     "postcss-preset-env": "^6.7.0",
     "sass-loader": "^8.0.0",
