--- a/package.json
+++ b/package.json
@@ -21,11 +21,11 @@
   "license": "ISC",
   "devDependencies": {
     "@babel/core": "^7.7.5",
+    "@babel/plugin-transform-regenerator": "^7.7.5",
+    "@babel/polyfill": "^7.7.0",
     "@babel/preset-env": "^7.7.6",
     "@fortawesome/fontawesome-free": "^5.12.0",
     "babel-loader": "^8.0.6",
-    "babel-polyfill": "^6.26.0",
-    "clean-webpack-plugin": "^3.0.0",
     "cors": "^2.8.5",
     "css-loader": "^3.4.0",
     "dotenv": "^8.2.0",
@@ -33,9 +33,10 @@
     "ejs-html-loader": "^4.0.1",
     "eslint": "^6.7.2",
     "express": "^4.17.1",
-    "express-formidable": "^1.2.0",
+    "express-validator": "^6.3.1",
     "extract-css-chunks-webpack-plugin": "^4.7.1",
     "file-loader": "^5.0.2",
+    "helmet": "^3.21.2",
     "html-loader": "^0.5.5",
     "html-webpack-plugin": "^3.2.0",
     "making-stuffs-queries": "^1.1.11",
