Added express async await and node-fetch

--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "node server/dev-server.js",
     "mail": "node server/mail-server.js",
-    "prod": "webpack --config webpack.prod.js"
+    "prod": "webpack --config webpack.prod.js",
+    "auth": "node server/auth-server.js"
   },
   "postcss": {
     "plugins": {
@@ -34,6 +35,7 @@
     "ejs-html-loader": "^4.0.1",
     "eslint": "^6.7.2",
     "express": "^4.17.1",
+    "express-async-await": "^1.1.0",
     "express-validator": "^6.3.1",
     "extract-css-chunks-webpack-plugin": "^4.7.1",
     "file-loader": "^5.0.2",
@@ -41,6 +43,7 @@
     "html-loader": "^0.5.5",
     "html-webpack-plugin": "^3.2.0",
     "making-stuffs-queries": "^1.1.11",
+    "node-fetch": "^2.6.0",
     "node-sass": "^4.13.0",
     "nodemailer": "^6.4.2",
     "postcss-loader": "^3.0.0",
